<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Profile Picture and Change Photo Button -->
        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/label_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_placeholder_round" />

            <Button
                android:id="@+id/btnchangephoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="45dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/photo_button_title"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <!-- Name Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_name" />

        </LinearLayout>

        <!-- Email Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <!-- Phone Number Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone" />

            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_ph_number"
                android:inputType="phone" />

        </LinearLayout>

        <!-- Gender Selection -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="Gender " />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:gravity="start|center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:text="@string/person_genderm" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_genderf" />
            </RadioGroup>
        </LinearLayout>

        <!-- Class Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Class" />

            <EditText
                android:id="@+id/classInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_class"
                android:inputType="number" />
        </LinearLayout>

        <!-- Major Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Major" />

            <EditText
                android:id="@+id/majorInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_major"
                android:inputType="text" />
        </LinearLayout>

        <!-- Save and Cancel Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Save button -->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/person_save_profile"
                android:textColor="#FFFFFF" />

            <!-- Cancel button -->
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:text="@string/cancel_app"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
